feat: Adding functions loading model, predict , draw_outputs , preprocess

--- a/Create_Python_Script.ipynb
+++ b/Create_Python_Script.ipynb
@@ -24,9 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Overwriting person_detect.py\n"
+    }
+   ],
    "source": [
     "%%writefile person_detect.py\n",
     "\n",
@@ -86,36 +94,77 @@
     "        self.output_shape=self.model.outputs[self.output_name].shape\n",
     "\n",
     "    def load_model(self):\n",
-    "    '''\n",
-    "    TODO: This method needs to be completed by you\n",
-    "    '''\n",
-    "        raise NotImplementedError\n",
-    "        \n",
+    "        self.core = IECore()\n",
+    "        self.net  = self.core.load_network(network = self.model, device_name= args.device, num_requests=0)\n",
+    "        '''\n",
+    "        TODO: This method needs to be completed by you\n",
+    "        '''\n",
+    "                \n",
     "    def predict(self, image):\n",
-    "    '''\n",
-    "    TODO: This method needs to be completed by you\n",
-    "    '''\n",
-    "        raise NotImplementedError\n",
-    "    \n",
+    "        '''\n",
+    "        TODO: This method needs to be completed by you\n",
+    "        '''\n",
+    "        f_image = self.preprocess_input(image)\n",
+    "        input_dict = {self.input_name:f_image}\n",
+    "        #Start asynchronous inference for specified request\n",
+    "        self.net.requests[0].async_infer(input_dict)\n",
+    "        # Wait for the result\n",
+    "        status=self.net.requests[0].wait(-1)\n",
+    "\n",
+    "        if status == 0:\n",
+    "\n",
+    "            #Get the results of the inference request\n",
+    "            restuls = self.net.requests[0].outputs[self.output_name]\n",
+    "            #Preprocess the output image\n",
+    "            outputs =self.preprocess_outputs(restuls)\n",
+    "            #Drawing bouding box\n",
+    "            f_box =self.draw_outputs(outputs , image)\n",
+    "\n",
+    "        coords =self.actual_coords(outputs,image)   \n",
+    "        return coords, f_box\n",
+    "\n",
+    " \n",
     "    def draw_outputs(self, coords, image):\n",
-    "    '''\n",
-    "    TODO: This method needs to be completed by you\n",
-    "    '''\n",
-    "        raise NotImplementedError\n",
+    "        image_size = list(image.shape)\n",
+    "\n",
+    "        for x_min, y_min, x_max, y_max in coords:\n",
+    "            x_min = int(x_min * image_size[1])\n",
+    "            y_min = int(y_min * image_size[0])\n",
+    "            x_max = int(x_max * image_size[1])\n",
+    "            y_max = int(y_max * image_size[0])\n",
+    "            cv2.rectangle(image, (x_min, y_min), (x_max, y_max), (0, 255, 255), 1) \n",
+    "            #Person_confidence = '%s: %.1f%%' % (\"Person\", round(confidence * 100, 1))\n",
+    "            #cv2.putText(frame, Person_confidence, (10, 90), cv2.FONT_HERSHEY_COMPLEX_SMALL, 1, (0, 255, 0), 1)\n",
+    "        return image\n",
     "\n",
     "    def preprocess_outputs(self, outputs):\n",
-    "    '''\n",
-    "    TODO: This method needs to be completed by you\n",
-    "    '''\n",
-    "        raise NotImplementedError\n",
+    "        '''\n",
+    "        TODO: This method needs to be completed by you\n",
+    "        '''\n",
+    "        return [box[3:] for box in outputs[0][0] if box[1] == 1 and box[2] > self.threshold]\n",
     "\n",
     "    def preprocess_input(self, image):\n",
-    "    '''\n",
-    "    TODO: This method needs to be completed by you\n",
-    "    '''\n",
-    "        raise NotImplementedError\n",
+    "        '''\n",
+    "        TODO: This method needs to be completed by you\n",
+    "        '''\n",
+    "        image = cv2.resize(image, (self.input_shape[3],self.input_shape[2]), interpolation=cv2.INTER_AREA) \n",
+    "        image = image.transpose((2,0,1)) \n",
+    "        image = image.reshape(1, *image.shape)  \n",
+    "        return image\n",
     "\n",
-    "\n",
+    "    # this function same with draw box, therefore, these functions can be merged\n",
+    "    def actual_coords(self, coords, image):\n",
+    "        image_size = list(image.shape) \n",
+    "        coord = []\n",
+    "        \n",
+    "        for box in coords: \n",
+    "            x1 = int(box[0]*image_size[1]) \n",
+    "            x2 = int(box[1]*image_size[1]) \n",
+    "            y1 = int(box[2]*image_size[0]) \n",
+    "            y2 = int(box[3]*image_size[0]) \n",
+    "            coord.append([x1,x2,y1,y2])\n",
+    "            \n",
+    "        return coord    \n",
     "def main(args):\n",
     "    model=args.model\n",
     "    device=args.device\n",
@@ -234,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
